Sutter Health/src/objects/Competitor_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Age_Banded_Total_Premium__c</fullName>
        <label>Age Banded Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem Blue Cross</fullName>
                </value>
                <value>
                    <fullName>Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Cal Choice</fullName>
                </value>
                <value>
                    <fullName>Health Net</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>United Health Care</fullName>
                </value>
                <value>
                    <fullName>Western Health Advantage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coinsurance__c</fullName>
        <label>Coinsurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Family_Rate__c</fullName>
        <label>EE + Family Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Rate__c</fullName>
        <label>EE Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_S_rate__c</fullName>
        <label>EE + S rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE__c</fullName>
        <label>EE + CC Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Number Of Employees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOPM__c</fullName>
        <label>OOPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>DHMO</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Carrier__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>CA Bronze HMO Deductible 5500</fullName>
                </value>
                <value>
                    <fullName>CA Gold AVN HMO 10</fullName>
                </value>
                <value>
                    <fullName>CA Gold AVN HMO 20</fullName>
                </value>
                <value>
                    <fullName>CA Gold AVN HMO 30</fullName>
                </value>
                <value>
                    <fullName>CA Gold HMO 10</fullName>
                </value>
                <value>
                    <fullName>CA Gold HMO 20</fullName>
                </value>
                <value>
                    <fullName>CA Gold HMO 30</fullName>
                </value>
                <value>
                    <fullName>CA Gold HMO Copay Plan</fullName>
                </value>
                <value>
                    <fullName>CA Platinum HMO Copay Plan</fullName>
                </value>
                <value>
                    <fullName>CA Silver HMO Deductible 1000</fullName>
                </value>
                <value>
                    <fullName>CA Silver HMO Deductible 1500</fullName>
                </value>
                <value>
                    <fullName>CA Silver HMO Deductible 2000</fullName>
                </value>
                <value>
                    <fullName>CA Silver HMO Deductible Copay Plan</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC 3500 50/50</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC 4000 Copay Plan</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC 6350 100/50</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC HSA 2500 50/50</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC HSA 3500 70/50</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC HSA 6300 100/50</fullName>
                </value>
                <value>
                    <fullName>CA Bronze MC Plan</fullName>
                </value>
                <value>
                    <fullName>CA Gold MC 500 80/50</fullName>
                </value>
                <value>
                    <fullName>CA Gold MC Copay Plan</fullName>
                </value>
                <value>
                    <fullName>CA Gold PPO 750 80/50</fullName>
                </value>
                <value>
                    <fullName>CA Platinum MC Copay Plan</fullName>
                </value>
                <value>
                    <fullName>CA Silver MC 1000 60/50</fullName>
                </value>
                <value>
                    <fullName>CA Silver MC 1000 75/50</fullName>
                </value>
                <value>
                    <fullName>CA Silver MC 1500 60/50</fullName>
                </value>
                <value>
                    <fullName>CA Silver MC 2000 60/50</fullName>
                </value>
                <value>
                    <fullName>CA Silver MC Coinsurance Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Competitor Plans</relationshipLabel>
        <relationshipName>Competitor_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RX_Deductible__c</fullName>
        <label>RX Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1__c</fullName>
        <label>RX Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_2__c</fullName>
        <label>RX Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_3__c</fullName>
        <label>RX Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Increase__c</fullName>
        <label>Renewal Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SPC__c</fullName>
        <label>SPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Competitor Plan</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Competitor Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>